Bug 489724 - kmymoney depends on knewstuff library but is not used when cpp macro KMM_DEBUG is not defined
Summary: kmymoney depends on knewstuff library but is not used when cpp macro KMM_DEBU...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: packaging (other bugs)
Version First Reported In: git (master)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks: 488491
  Show dependency treegraph
 
Reported: 2024-07-04 10:03 UTC by Ralf Habacker
Modified: 2024-07-05 04:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2024-07-04 10:03:36 UTC
STEPS TO REPRODUCE
1. see https://invent.kde.org/office/kmymoney/-/blob/master/CMakeLists.txt#L114 - knewstuff library is added
2. see https://invent.kde.org/office/kmymoney/-/blame/master/kmymoney/kmymoney.cpp?page=5#L4002

OBSERVED RESULT
The knewstuff library is requested in the cmake build system unconditionally. 
An api function from knewstuff is used at https://invent.kde.org/office/kmymoney/-/blame/master/kmymoney/kmymoney.cpp?page=5#L4002, but the associate support is only reachable when the cpp macro KMM_DEBUG is defined.

EXPECTED RESULT
If debugging is disabled, knewstuff should not be requested in the cmake build system and not be used in the c++ code.

SOFTWARE/OS VERSIONS
Linux: openSUSE_Leap_15.5 
KDE Frameworks Version: 5.103.0
Qt Version:  5.15.4
Comment 1 Thomas Baumgart 2024-07-05 04:25:58 UTC
Git commit 3ea7ddcd1d8f9a7cfe06d5bc53c15546c32bc9f1 by Thomas Baumgart.
Committed on 05/07/2024 at 04:25.
Pushed by tbaumgart into branch 'master'.

Remove dependency to knewstuff

The whole "new stuff" logic for the online quotes has been moved to the
alkimia library so we don't need it here anymore.
FIXED-IN: 5.2

M  +1    -1    CMakeLists.txt
M  +0    -1    kmymoney/CMakeLists.txt
M  +0    -4    kmymoney/kmymoney.cpp

https://invent.kde.org/office/kmymoney/-/commit/3ea7ddcd1d8f9a7cfe06d5bc53c15546c32bc9f1