Remove dependency to knewstuff

The whole "new stuff" logic for the online quotes has been moved to the
alkimia library so we don't need it here anymore.

BUG: 489724
FIXED-IN: 5.2